Hardcode carousel for RAY archivement

--- a/_i18n/en/_posts/project/2020-11-17-ray2020.md
+++ b/_i18n/en/_posts/project/2020-11-17-ray2020.md
@@ -67,6 +67,598 @@ We hope that students can produce wireframes in two different directions, one is
 
 ## Achievements
 
+<div class="carouselRAY wrapper" markdown="0">
+  <div class="nav-prev"><button><img
+        src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNDUiIGhlaWdodD0iMTAwIiB2aWV3Qm94PSIwIDAgNDUgMTAwIiBmaWxsPSJub25lIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPgo8cGF0aCBkPSJNNDMgMkwzIDUwTDQzIDk4IiBzdHJva2U9IndoaXRlIiBzdHJva2Utd2lkdGg9IjQiLz4KPC9zdmc+Cg=="
+        alt=""></button></div>
+  <div class="nav-next"><button><img
+        src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNDUiIGhlaWdodD0iMTAwIiB2aWV3Qm94PSIwIDAgNDUgMTAwIiBmaWxsPSJub25lIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPgo8cGF0aCBkPSJNMiAyTDQyIDUwTDIgOTgiIHN0cm9rZT0id2hpdGUiIHN0cm9rZS13aWR0aD0iNCIvPgo8L3N2Zz4K"
+        alt=""></button></div>
+  <div class="slides-wrapper">
+    <div class="slides" style="--slides-num:7; left: calc(0%);">
+      <div class="project-card">
+        <div class="preview" style="background-image: url(&quot;https://ray.pdis.nat.gov.tw/_nuxt/img/preview.e4a67c5.jpg&quot;);"></div>
+        <div class="card-body">
+          <h2 class="card-title">臺北市民服務大平台，<br>從場地租用看見市民痛點。</h2>
+          <div class="card-content">
+            <p>
+              此平台由臺北市資訊局架設、維護，為整合臺北市政府各機關之申辦案件服務的平台，提供超過 1400 項線上申辦服務。
+            </p>
+            <p>
+            </p>
+            <p>
+              團隊經過前期研究後，發現「場地租借服務」是此次改造的潛在標的，除了因場地租用的服務四散在不同的營運方外，服務流程本身也相當繁複。因此，在設計方面，期能透過「效率查找」、「良好的資訊呈現」、「優化租借服務流程」三大目標，解決市民在租借場地上的痛點。
+            </p>
+            <p>
+            </p>
+            <p>
+              歡迎點擊下方的「查看更多」，瞭解團隊如何進行改造！
+            </p> <label class="tag">地方政府網站</label><label class="tag">市民服務</label>
+            <div class="members">
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/f58c1efd1a4a4fcf77e3cf380be5058d.0bfe91e.jpg" alt="李彤"
+                  class="rounded-circle">
+                <p class="name">
+                  李彤
+                </p>
+              </div>
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/c721bd7a59482ef12f0229c130801073.8f479a7.jpg" alt="孫若盈"
+                  class="rounded-circle">
+                <p class="name">
+                  孫若盈
+                </p>
+              </div>
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/e74d65d26d16a9954bd294e6a8744cfe.ba786e9.jpg" alt="李佩芸"
+                  class="rounded-circle">
+                <p class="name">
+                  李佩芸
+                </p>
+              </div>
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/2fd36c4c20bbe0a7e1b9783fc0c90388.c40cc2a.jpg" alt="張硯涵"
+                  class="rounded-circle">
+                <p class="name">
+                  張硯涵
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="card-action"><a href="/taipei_service/" class="button">看更多</a></div>
+        </div>
+      </div>
+      <div class="project-card">
+        <div class="preview" style="background-image: url(&quot;https://ray.pdis.nat.gov.tw/_nuxt/img/preview.192916d.jpg&quot;);"></div>
+        <div class="card-body">
+          <h2 class="card-title">基隆市政府全球資訊網，<br>打造不迷路的整合式入口網。</h2>
+          <div class="card-content">
+            <p>
+              此網站的主要功能為整合基隆市政府下各機關之資訊，並且引導民眾至轄下各機關的附屬網站，以找到相應的地方性業務。
+            </p>
+            <p>
+            </p>
+            <p>
+              有別於一般功能明確的政府網站，此類型的入口網以「大量的資訊揭露」為主要目的；而透過團隊的研究發現，「混亂的資訊架構」，以及「不直觀的瀏覽流程」是此次改造的重點方向。秉持「廣而淺並非窄而深」的設計原則，團隊捲起袖子、重新梳理網站架構，打造一個不迷路的整合式入口網。
+            </p>
+            <p>
+            </p>
+            <p>
+              歡迎點擊下方的「查看更多」，瞭解團隊如何進行改造！
+            </p> <label class="tag">地方政府網站</label><label class="tag">市民服務</label>
+            <div class="members">
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/372b73220f6d737c49d4ddf43b33cfb8.f302b6f.jpg" alt="翁瑞宏"
+                  class="rounded-circle">
+                <p class="name">
+                  翁瑞宏
+                </p>
+              </div>
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/2eae57d108485d76fea49e98944eeba5.e8c1672.jpg" alt="楊郁如"
+                  class="rounded-circle">
+                <p class="name">
+                  楊郁如
+                </p>
+              </div>
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/07fd0ae03cf725d89c4b36517b8fcf21.b491c37.jpg" alt="潘躍升"
+                  class="rounded-circle">
+                <p class="name">
+                  潘躍升
+                </p>
+              </div>
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/7709ee7e1a2ad3e2b6937dd5b8ba3aa3.00c1a7c.jpg" alt="吳育葦"
+                  class="rounded-circle">
+                <p class="name">
+                  吳育葦
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="card-action"><a href="/klcg/" class="button">看更多</a></div>
+        </div>
+      </div>
+      <div class="project-card">
+        <div class="preview" style="background-image: url(&quot;https://ray.pdis.nat.gov.tw/_nuxt/img/preview.9fa2fe5.jpg&quot;);"></div>
+        <div class="card-body">
+          <h2 class="card-title">教育部青年署官網，<br>讓好活動能被更多青年學子看見。</h2>
+          <div class="card-content">
+            <p>
+              此網站為綜合青年相關業務之網站，包含各式活動、講座、青年志工、國際參與、體驗學習等等，對於有目標而無資源的青年來說，是相當好的資源庫。
+            </p>
+            <p>
+            </p>
+            <p>
+              團隊經過前期研究後，發現「太少青年參與活動」及「資訊散亂」是現階段網站遭遇的主要挑戰；透過重整網站地圖、放大「活動」在網站上的視覺焦點，以減少使用者在找尋活動的步程，進一步提高使用意願。
+            </p>
+            <p>
+            </p>
+            <p>
+              歡迎點擊下方的「查看更多」，瞭解團隊如何進行改造！
+            </p> <label class="tag">中央政府網站</label><label class="tag">就學</label>
+            <div class="members">
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/e1fe25cd70f6c184828b35d3255fa409.98a3a38.jpg"
+                  alt="黃采媛" class="rounded-circle" width="1" height="1">
+                <p class="name">
+                  黃采媛
+                </p>
+              </div>
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/a918c31616b10ce784663f41af04861c.5e371b7.jpg"
+                  alt="蔡蕙羽" class="rounded-circle" width="1" height="1">
+                <p class="name">
+                  蔡蕙羽
+                </p>
+              </div>
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/bf76689e20c87a995b7a6a98ac7702ea.2614e80.jpg"
+                  alt="簡巧恩" class="rounded-circle" width="1" height="1">
+                <p class="name">
+                  簡巧恩
+                </p>
+              </div>
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/b4d6ac48e7731791d8dbab90324250a0.f0c81e1.jpg"
+                  alt="羅宛庭" class="rounded-circle" width="1" height="1">
+                <p class="name">
+                  羅宛庭
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="card-action"><a href="/yda/" class="button">看更多</a></div>
+        </div>
+      </div>
+      <div class="project-card">
+        <div class="preview" style="background-image: url(&quot;https://ray.pdis.nat.gov.tw/_nuxt/img/preview.a471a12.jpg&quot;);"></div>
+        <div class="card-body">
+          <h2 class="card-title">勞動部勞工保險局e化服務系統，<br>讓退休人士也能安心使用。</h2>
+          <div class="card-content">
+            <p>
+              此系統提供勞工保險相關的線上服務，包含異動查詢、投保年資查詢、申辦作業，及其他繳費業務。
+            </p>
+            <p>
+            </p>
+            <p>
+              團隊在經過前期研究及收斂出親合圖後，定錨了兩項關鍵議題，分別是「服務缺乏適當指引」及「難以快速且放心地找到關鍵資訊」。透過適時的提示引導、梳理資訊架構、重整導覽頁面等關鍵設計，團隊逐步優化了服務系統的體驗，藉以打造令退休人士也能安心使用的勞保網站。
+            </p>
+            <p>
+            </p>
+            <p>
+              歡迎點擊下方的「查看更多」，瞭解團隊如何進行改造！
+            </p> <label class="tag">中央政府網站</label><label class="tag">就業</label>
+            <div class="members">
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/926b3ab0ab0d98d8dfc2d8949d198f1c.e341289.jpg"
+                  alt="林暖婷" class="rounded-circle" width="1" height="1">
+                <p class="name">
+                  林暖婷
+                </p>
+              </div>
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/be1283eb4e70599e1b62abff61f92787.3fab5ef.jpg"
+                  alt="賴玨澄" class="rounded-circle" width="1" height="1">
+                <p class="name">
+                  賴玨澄
+                </p>
+              </div>
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/d81d0857345ccbc83f52b586cc1d81e2.ec3cee2.jpg"
+                  alt="徐遠志" class="rounded-circle" width="1" height="1">
+                <p class="name">
+                  徐遠志
+                </p>
+              </div>
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/2d5f14997ef4b5d7d61f420114ed9c35.4b237f2.jpg"
+                  alt="黃炳儒" class="rounded-circle" width="1" height="1">
+                <p class="name">
+                  黃炳儒
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="card-action"><a href="/edesk_bli/" class="button">看更多</a></div>
+        </div>
+      </div>
+      <div class="project-card">
+        <div class="preview" style="background-image: url(&quot;https://ray.pdis.nat.gov.tw/_nuxt/img/preview.9522ab9.jpg&quot;);"></div>
+        <div class="card-body">
+          <h2 class="card-title">臺中市政府社會局，<br>兼顧民眾和業務同仁需求的再設計。</h2>
+          <div class="card-content">
+            <p>
+              臺中市社會局網站為地方政府網站，其建制目標包含四個面向：政策推播、服務成果宣傳、提供民眾社福資訊，及良好的服務體驗。
+            </p>
+            <p>
+            </p>
+            <p>
+              團隊經研究後發現三項關鍵議題，分別為「不明確的服務指引」、「申辦流程不清楚」，以及「線上下服務存有斷點」。團隊於是透過完善服務引導、重整公文呈現方式、連結社福地圖等作為，在不增加業務科的負擔下，優化網站的使用體驗。
+            </p>
+            <p>
+            </p>
+            <p>
+              歡迎點擊下方的「查看更多」，瞭解團隊如何進行改造！
+            </p> <label class="tag">地方政府網站</label><label class="tag">社會福利</label>
+            <div class="members">
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/5d31e0a125991d73aa61e5fc86d7dd35.6aa1211.jpg"
+                  alt="張詩菱" class="rounded-circle" width="1" height="1">
+                <p class="name">
+                  張詩菱
+                </p>
+              </div>
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/67670b2ac9b675f3542886af828035d7.dc8d0ac.jpg"
+                  alt="楊博智" class="rounded-circle" width="1" height="1">
+                <p class="name">
+                  楊博智
+                </p>
+              </div>
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/dc4210679b05104ece79be7c35d6d419.a88654a.jpg"
+                  alt="黃凡澔" class="rounded-circle" width="1" height="1">
+                <p class="name">
+                  黃凡澔
+                </p>
+              </div>
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/7210552012e0530ea278996643c5c263.05693eb.jpg"
+                  alt="何瑜萱" class="rounded-circle" width="1" height="1">
+                <p class="name">
+                  何瑜萱
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="card-action"><a href="/taichung_society/" class="button">看更多</a></div>
+        </div>
+      </div>
+      <div class="project-card">
+        <div class="preview" style="background-image: url(&quot;https://ray.pdis.nat.gov.tw/_nuxt/img/preview.445ae18.jpg&quot;);"></div>
+        <div class="card-body">
+          <h2 class="card-title">臺北市立聯合醫院，<br>在專業與易用間探索網路掛號的設計可能。</h2>
+          <div class="card-content">
+            <p>
+              臺北市立聯合醫院為北市衛生局所屬的公立醫院，設有七大院區，此次團隊聚焦於聯合醫院的網路掛號系統進行再造。
+            </p>
+            <p>
+            </p>
+            <p>
+              經過前期研究後，診斷出系統目前有三大核心問題「版面配置紊亂」、「資訊回饋不明確」，以及「訊息不符合使用者認知」。歷經多次設計與驗證後，團隊透過「版面重整、線上下資訊整合、依症狀查找科別」等特色功能，打造了全新的掛號體驗。
+            </p>
+            <p>
+            </p>
+            <p>
+              歡迎點擊下方的「查看更多」，瞭解團隊如何進行改造！
+            </p> <label class="tag">地方政府網站</label><label class="tag">醫療</label>
+            <div class="members">
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/35194933009b376b78f73243f45ce528.a69008b.jpg"
+                  alt="賴逸丞" class="rounded-circle" width="1" height="1">
+                <p class="name">
+                  賴逸丞
+                </p>
+              </div>
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/d51c8ee8abaf285e7b99e0443bd485ad.7821be4.jpg"
+                  alt="彭泰維" class="rounded-circle" width="1" height="1">
+                <p class="name">
+                  彭泰維
+                </p>
+              </div>
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/c1aa309d835a537071fde99c4ba31c25.cf2cd6b.jpg"
+                  alt="龔俐霏" class="rounded-circle" width="1" height="1">
+                <p class="name">
+                  龔俐霏
+                </p>
+              </div>
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/e4fd07b8ee111ebb9eb4a1f9ef0b1985.f0f58a6.jpg"
+                  alt="林瀚軒" class="rounded-circle" width="1" height="1">
+                <p class="name">
+                  林瀚軒
+                </p>
+              </div>
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/3d1414b0a0db8f52af1e7aecf7c61ede.55bcdab.jpg"
+                  alt="翁暄奇" class="rounded-circle" width="1" height="1">
+                <p class="name">
+                  翁暄奇
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="card-action"><a href="/tpech/" class="button">看更多</a></div>
+        </div>
+      </div>
+      <div class="project-card">
+        <div class="preview" style="background-image: url(&quot;https://ray.pdis.nat.gov.tw/_nuxt/img/preview.7092f27.jpg&quot;);"></div>
+        <div class="card-body">
+          <h2 class="card-title">臺灣就業通，<br>從就業服務處探見服務的改造潛力。</h2>
+          <div class="card-content">
+            <p>
+              此平台由勞發署維運，提供即時的就業資訊、整合職缺資源，並提供民眾線下的職涯協助。
+            </p>
+            <p>
+            </p>
+            <p>
+              團隊經研究探索後，發現現存功能難以凸顯就業通的市場必要性，且民眾無法直觀地得知其所提供的求職服務。因此，團隊擴大發展原有的「實體諮詢服務」，新增「線上預約、申辦」等流程，使就業服務處得以在線上管道發揮潛在價值。此外，團隊也重整了資訊顆粒度和架構，優化整體易用性。
+            </p>
+            <p>
+            </p>
+            <p>
+              歡迎點擊下方的「查看更多」，瞭解團隊如何進行改造！
+            </p> <label class="tag">中央政府網站</label><label class="tag">就業</label>
+            <div class="members">
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/e7af6208057befcb7f00ea7a8b772b3e.459f663.jpg"
+                  alt="賴彥汝" class="rounded-circle" width="1" height="1">
+                <p class="name">
+                  賴彥汝
+                </p>
+              </div>
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/03d1860a9f75637a1871d1ce5f889816.099b789.jpg"
+                  alt="羅敏" class="rounded-circle" width="1" height="1">
+                <p class="name">
+                  羅敏
+                </p>
+              </div>
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/3d4c1de69c770f0e32411b8555d3b63f.c03d2c0.jpg"
+                  alt="李安峻" class="rounded-circle" width="1" height="1">
+                <p class="name">
+                  李安峻
+                </p>
+              </div>
+              <div class="avatar"><img src="https://ray.pdis.nat.gov.tw/_nuxt/img/d647382201a9a1fa0ae98a10030fdaf9.ed21ed9.jpg"
+                  alt="李欣儒" class="rounded-circle" width="1" height="1">
+                <p class="name">
+                  李欣儒
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="card-action"><a href="/taiwan_jobs/" class="button">看更多</a></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<style type="text/css">
+  :root {
+    --color-ray: rgb(238, 96, 71);
+    --color-ray-alpha: rgba(238, 96, 71, .74);
+  }
+  .wrapper {
+    max-width: 100%;
+    margin: 0 auto;
+  }
+  a.button {
+    font-weight: 700;
+    color: #fff !important;
+    background-color: var(--color-ray);
+    padding: .5rem 2rem;
+    width: max-content;
+    border-radius: 20px;
+    border-color: var(--color-ray);
+    border-style: solid;
+    font-size: 1.25rem;
+    line-height: 1.2;
+  }
+  h2.card-title {
+    text-align: left !important;
+    color: unset !important;
+    font-size: 1.5rem;
+    margin-bottom:unset !important;
+  }
+  .project-card{
+    background-color: white;
+    border-radius: unset;
+    display: grid;
+    grid-template-areas: 'preview body';
+    grid-template-columns: 50% 50%;
+  }
+  .project-card > .preview {
+    grid-area: preview;
+    background-size: cover;
+    background-position: center;
+  }
+  .card-body {
+    grid-area: body;
+    padding: 3rem;
+    display: grid;
+    grid-template-rows: auto 1fr 2.5rem;
+    grid-template-areas: 'title' 'content' 'action';
+    grid-row-gap: 2em;
+  }
+  .card-body > .card-title {
+    grid-area: title;
+  }
+  .card-body > .card-content {
+    grid-area: content;
+  }
+  .card-body > .card-content label.tag {
+    background-color: #C4C4C4;
+    line-height: 1.5;
+    padding: .5em 1.5em;
+    margin: .5em;
+  }
+  .card-body > .card-content .members {
+    display: grid;
+    margin: 1em 0;
+    grid-template-columns: repeat(4, auto);
+    align-items: start;
+  }
+  @media screen and (max-width: 767px) {
+  .card-body > .card-content .members {
+      grid-template-columns: repeat(2, auto);
+  }
+  }
+  @media screen and (max-width: 991px) {
+  .project-card{
+      grid-template-columns: 1fr;
+      grid-template-rows: 30vh 1fr;
+      grid-template-areas: 'preview' 'body'
+  }
+  }
+  @media screen and (max-width: 1199px) {
+  .card-body {
+      padding: 3rem 1.5rem;
+  }
+  }
+  .card-body > .card-action {
+    grid-area: action;
+    align-self: center;
+    justify-self: end;
+  }
+</style>
+<style type="text/css">
+
+.avatar {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: repeat(2, auto);
+  justify-items: center;
+  justify-content: center;
+  grid-row-gap: .5rem;
+}
+.avatar .name {
+  font-weight: 500;
+  align-self: start;
+}
+.avatar img {
+  align-self: end;
+  width: 80px;
+}
+</style>
+<style type="text/css">
+@-webkit-keyframes bounce {
+
+    0%,
+    100%,
+    20%,
+    50%,
+    80% {
+      transform: translateY(0);
+    }
+
+    40% {
+      transform: translateY(-30px);
+    }
+
+    60% {
+      transform: translateY(-15px);
+    }
+  }
+
+  @keyframes bounce {
+
+    0%,
+    100%,
+    20%,
+    50%,
+    80% {
+      transform: translateY(0);
+    }
+
+    40% {
+      transform: translateY(-30px);
+    }
+
+    60% {
+      transform: translateY(-15px);
+    }
+  }
+.carouselRAY {
+  display: grid;
+  grid-template-columns: 1fr var(--slide-width) 1fr;
+  grid-template-rows: auto;
+  grid-template-areas: 'nav-prev slides nav-next';
+}
+.carouselRAY > .nav-prev,
+.carouselRAY > .nav-next {
+  justify-self: center;
+  align-self: center;
+}
+.carouselRAY > .nav-prev img,
+.carouselRAY > .nav-next img {
+  max-width: calc((100vw - var(--slide-width)) / 2);
+  width: 100%;
+}
+.carouselRAY > .nav-prev > button,
+.carouselRAY > .nav-next > button,
+.carouselRAY > .nav-prev > button:focus,
+.carouselRAY > .nav-next > button:focus {
+  background-color: unset;
+  border: unset;
+  outline: none;
+
+  -webkit-animation-duration: 1s;
+
+          animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation-timing-function: ease-in-out;
+          animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+}
+.carouselRAY > .nav-next > button:hover,
+.carouselRAY > .nav-prev > button:hover {
+  cursor: pointer;
+  -webkit-animation-name: bounce;
+          animation-name: bounce;
+}
+@media (hover: none) and (pointer: coarse) {
+.carouselRAY > .nav-next > button:hover,
+  .carouselRAY > .nav-prev > button:hover {
+    -webkit-animation-name: none;
+            animation-name: none;
+}
+}
+.carouselRAY > .nav-prev {
+  grid-area: nav-prev;
+}
+.carouselRAY > .nav-next {
+  grid-area: nav-next;
+}
+.carouselRAY > .slides-wrapper {
+  grid-area: slides;
+  overflow: hidden;
+}
+.carouselRAY > .slides-wrapper > .slides {
+  display: grid;
+  position: relative;
+  grid-template-columns: repeat(3, 100%);
+  grid-template-columns: repeat(var(--slides-num, 3), 100%);
+  transition: left 0.5s cubic-bezier(0.2, 1, 0.3, 1) 0s;
+}
+</style>
+<style>
+  .post-content .carouselRAY > .indicators,
+  .post-content .carouselRAY > .indicators > li {
+    list-style: none !important;
+  } 
+</style>
+
+<script>
+const prevBtn = document.querySelector('.carouselRAY.wrapper > .nav-prev > button');
+const nextBtn = document.querySelector('.carouselRAY.wrapper > .nav-next > button');
+const slides = document.querySelector('.carouselRAY.wrapper > .slides-wrapper > .slides');
+let offset = 0;
+prevBtn.addEventListener('click', () => {
+  offset = (offset - 1) > 0 ? offset - 1 : 6
+  changeSlidesStyle();
+});
+nextBtn.addEventListener('click', () => {
+  offset = (offset + 1) % 7
+  changeSlidesStyle();
+});
+
+function changeSlidesStyle() {
+  const styleOfSlides = `--slides-num:7; left: calc(${offset * -100}%);`
+  slides.setAttribute('style', styleOfSlides);
+}
+</script>
+
 Although the internship program has just ended, we have received positive feedback from many agencies. Although some agencies have already contracted out services, the results of the students let them face the manufacturers. Can discuss more systematically, incorporate the results of the students into the implementation of the manufacturer, and make a certain degree of modification. In addition, we are also very happy to hear that the Keelung City Government, the Youth Department of the Ministry of Education, and the Taiwan Employment Service are expected to revise their official websites in 2021. At that time, they will incorporate the achievements of the students and invite them to collaborate with manufacturers. Of course, it is still too early to set the results, and we will continue to track the revision progress of the various ministries, and make the next Ray better through every feedback and observed problems! 
 
 PDIS also publishes all the wonderful results of the students on the Internet. Friends who are interested are welcome to visit the following website to watch the full record of the wonderful service design and transformation of each group of students in the past two months! 
