--- a/_i18n/en/_posts/2020-12-17-眾智一心-共創結晶.md
+++ b/_i18n/en/_posts/2020-12-17-眾智一心-共創結晶.md
@@ -1,25 +1,24 @@
 ---
   layout: "post"
-  title: "Shang and Zhou Column: All Wisdom, One Heart, Create Crystal"
-  excerpt: "Starting this year, we will not only deepen youth participation in existing mechanisms, but also create new channels."
+  title: "Crystallizing collective intelligence with shared values"
+  excerpt: "Throughout this eventful year, partnership between social innovators and startups have created more and more diversified cross-domain and cross-border collaborations."
   image: "/assets/imgs/b02017a75928446980deedc216db4e2cf7532ca5.jpeg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+🍏 At the end of November, I attended the end-of-term banquet held at the Social Innovation Lab and had a conversation with the social innovation and startup resident teams who were about to "graduate". What I saw are friends who have devoted themselves to solving social problems and gradually established an ecosystem for sustainable development.
 
-🍏 At the end of November, I participated in the final meal narration held at the Social Innovation Experimental Center, and communicated with the social innovation and new innovation teams who are about to "graduate". I have seen these friends who have dedicated themselves to solving social problems and gradually established a sustainable ecosystem. 
+📦 Take this year's social innovation resident team "PackAge+" as an example. In his past work experience, the founder Ye Dewei came across a large amount of online shopping goods and realized that the disposable packaging resulting from online shopping has a huge impact on the environment. Therefore, he started a business with his friends to lease the reusable packaging bags to e-commerce platforms. After receiving shipments from the platforms, consumers would return the outer packaging to the participating offline stores or points of collection, and the team would take them back to the warehouse for cleaning and sorting.
 
-📦 Taking this year's social innovation team "Pikejia" as an example, the founder Ye Dewei has been exposed to a large number of online shopping goods in his past work experience and realized that the disposable packaging caused by online shopping has a huge impact on the environment. . Therefore, he started a business together with his friends, renting out the recycled packaging bags to the e-commerce platform. After the platform is shipped, consumers return the outer packaging to the offline cooperative store or return point, and the team returns to the warehouse for cleaning and sorting. 
+📈 This mechanism not only effectively reduces the waste of resources caused by packaging and lowers packaging costs for e-commerce platforms, but consumers can also get online and offline discounts after returning the packaging. Even stores that participate in collecting the returned packaging also get increased shopper visits as the result. This win-win-win business model has now been favored by more than 60 e-commerce businesses. This year, it has successfully raised NT$6 million in funds. In the presence of the impacts from this year's pandemic, this is an exciting result.
 
-📈 This mechanism not only effectively reduces the waste of resources caused by packaging, e-commerce platforms save packaging costs, consumers can get online and offline discounts after returning the packaging, and even cooperative return stores also increase buying. This win-win-win business model has now been favored by more than 60 e-commerce companies. This year, it has successfully raised 6 million yuan in funds. Under the influence of this year's epidemic, it is an exciting result. 
+🎶 Among the resident startup teams, Letron Music Inc., with the original intention of "reshaping the music ecosystem via technology", developed the "Letron" app, which showed me the vision of future music creation that is well worth expecting. In the Internet age, those who are aspiring to create have more opportunities to contribute their talents to the world. However, inspiration is not readily available, and creators are often "blocked" because of this and cannot stably produce quality works. Therefore, Letron Music has developed a popular music AI algorithm to decompose the choices of various music styles, melodies, and rhythms. With machine-assisted composing, a song can be written in an average of 3 to 5 minutes to help music composers overcome the bottleneck.
 
-🎶 The new creation base is stationed in the team, and Leyichuang has developed the "Ledian" app with the original intention of "reshape the music ecosystem with technology", which allows me to see the future music worth looking forward to Create a look. In the Internet age, friends who are aspiring to create have more opportunities to contribute their talents to the world, but inspiration is not readily available, and creators are often "blocked" because of this and cannot stably produce high-quality works. Therefore, Le Yi Chuang has developed a popular music AI algorithm to decompose different song types, melody and rhythm choices. With machine-assisted writing, a song can be written in an average of three to five minutes to help music creators get out of the bottleneck. . 
+🎬 In addition to assisting in creation through digital technology, another unique feature of "Letron" is that they actively build a music ecosystem through the Internet, including music copyright application, demoing, recording, automatic generation of MVs, and uploading to social platforms. All can be done in the App. The subsequent derived revenues from the songs and proofs of copyright can also be managed through the distributed ledger technology, so that the fruits of the creators’ labor can be effectively protected.
 
-🎬 In addition to assisting in creation through digital technology, another unique feature of "Music Point" is that they actively build a music ecosystem through the Internet, including music copyright application, audition, recording, automatic generation and upload of MV videos The social platform can be completed in the app in the future; and the subsequent derived singing revenue and copyright deposits can also be managed through decentralized ledger management, so that the creator's brainchild can be effectively protected. 
+💡 As I listened to the presentations of the resident teams in the end-of-term luncheon, I couldn't help but think of a conversation I had with Dr. Geoff Mulgan, the father of British social innovation, at the NPOst annual meeting in October this year. He put forward the concept of "collective intelligence" and pointed out that the collaboration between people and between people and machines can allow us to form an organic organization and truly solve the world's problems.
 
-💡 When I listened to the results of the stationed team during the final meal, I couldn't help but think of the conversation between me and Dr. Geoff Mulgan, the father of social innovation in the United Kingdom, at the NPOst annual meeting in October this year. . He put forward the concept of "collective intelligence", pointing out that the collaboration between people and between people and machines can allow us to form an organic organization and truly solve the world's problems. 
-
-🎓 In my opinion, the partners of social innovation and new innovation have created more and more diverse cross-domain and cross-border collaborations in this year full of changes, which is the beautiful crystallization of collective wisdom. "Graduation" is the beginning of true maturity. I sincerely wish these teams. 
+🎓 Throughout this eventful year, partnerships between social innovators and startups have created more and more diversified cross-domain and cross-border collaborations — a beautiful crystallization of collective intelligence. "Graduation" is the beginning of true maturity. I sincerely wish these teams well.
