--- a/_posts/2020-12-17-眾智一心-共創結晶.md
+++ b/_posts/2020-12-17-眾智一心-共創結晶.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 商周專欄：眾智一心，共創結晶
-excerpt: 今年開始，我們除了在既有機制上，深化青年參與，同時也打造全新的管道。
+excerpt: 社創和新創的夥伴們，在這個充滿變動的一年，創造出越來越多元的跨域、跨界協作。
 image: /assets/imgs/b02017a75928446980deedc216db4e2cf7532ca5.jpeg
 author: 唐鳳、彭筱婷
 category: blog
