Auto archive image
Archive and Modify follow file:
"_i18n/zh-TW/_posts/2021-01-05-\343\200\214\345\275\242\345\274\217\350\274\225\351\207\217\357\274\214\345\205\247\346\266\265\346\277\203\347\270\256\343\200\215\347\232\204\345\215\224\344\275\234.md"
"_posts/2021-01-05-\343\200\214\345\275\242\345\274\217\350\274\225\351\207\217\357\274\214\345\205\247\346\266\265\346\277\203\347\270\256\343\200\215\347\232\204\345\215\224\344\275\234.md"
assets/imgs/0d1fb92dbc43e513d2d6a92492afa3319da8ab8e.jpeg

--- a/_i18n/zh-TW/_posts/2021-01-05-「形式輕量，內涵濃縮」的協作.md
+++ b/_i18n/zh-TW/_posts/2021-01-05-「形式輕量，內涵濃縮」的協作.md
@@ -36,7 +36,7 @@ tags:
 ### 會議現場
 
 <figure>
-  <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/0/0d1fb92dbc43e513d2d6a92492afa3319da8ab8e.jpeg">
+  <img src="/assets/imgs/0d1fb92dbc43e513d2d6a92492afa3319da8ab8e.jpeg">
   <figcaption>當天會議的海報，如同一般政府部門的會議標示</figcaption>
 </figure>
 
