--- a/_posts/2021-01-05-「形式輕量，內涵濃縮」的協作.md
+++ b/_posts/2021-01-05-「形式輕量，內涵濃縮」的協作.md
@@ -36,7 +36,7 @@ tags:
 ### 會議現場
 
 <figure>
-  <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/0/0d1fb92dbc43e513d2d6a92492afa3319da8ab8e.jpeg">
+  <img src="/assets/imgs/0d1fb92dbc43e513d2d6a92492afa3319da8ab8e.jpeg">
   <figcaption>當天會議的海報，如同一般政府部門的會議標示</figcaption>
 </figure>
 
