* Fix missing image from @enenkoyako

--- a/_i18n/en/_posts/2021-01-05-「形式輕量，內涵濃縮」的協作.md
+++ b/_i18n/en/_posts/2021-01-05-「形式輕量，內涵濃縮」的協作.md
@@ -2,8 +2,8 @@
   layout: "post"
   title: "Collaboration with \"lightweight form and concentrated connotation\""
   excerpt: "Reducing the additional administrative work of the ministries and committees can make the cooperative meeting mechanism run for a long time."
-  image: "/assets/imgs/57076c17521f19be6dce41548c27721fb9cbab86.png"
-  author: "許恩恩"
+  image: "/assets/imgs/57076c17521f19be6dce41548c27721fb9cbab86.jpg"
+  author: "En-En Hsu"
   category: "blog"
   tags: 
     - "開放政府"
