--- a/_posts/2021-01-05-「形式輕量，內涵濃縮」的協作.md
+++ b/_posts/2021-01-05-「形式輕量，內涵濃縮」的協作.md
@@ -2,7 +2,7 @@
 layout: post
 title: 「形式輕量，內涵濃縮」的協作
 excerpt: 減少部會額外的行政工作，更能讓協作會議機制長久運行。
-image: /assets/imgs/57076c17521f19be6dce41548c27721fb9cbab86.png
+image: /assets/imgs/57076c17521f19be6dce41548c27721fb9cbab86.jpg
 author: 許恩恩
 category: blog
 tags:
