Fix missing images

--- a/_i18n/en/_posts/2018/2018-04-29-蘇花改會是機車安全回家的路嗎？協作會議現場觀察.md
+++ b/_i18n/en/_posts/2018/2018-04-29-蘇花改會是機車安全回家的路嗎？協作會議現場觀察.md
@@ -2,7 +2,7 @@
   layout: "post"
   title: "Is the Suhua Reformation the safe way for locomotives to go home? Collaborative meeting site observation"
   excerpt: "Since Suhua Reform did not open locomotives or heavy locomotives, many locomotives protested when they opened up. They believed that the ban on locomotive traffic in Suhua was a discrimination against locomotives and caused controversy. After the discussion at the meeting, the General Administration of Highways promised to send out relevant research on the locomotive long tunnel for reference for subsequent policies. In the future, before planning, such roads also hope that scholars and organizations related to organic vehicles will join the assessment to make the planning more perfect."
-  image: "/assets/imgs/b47fb29c6be0f07c367fff2529cad68e7d0e377e_1_690x286.jpg"
+  image: "/assets/imgs/b47fb29c6be0f07c367fff2529cad68e7d0e377e"
   author: "雨蒼"
   category: "blog"
   tags: 
@@ -17,7 +17,7 @@ On April 27, 2018, the PDIS Group&#39;s Total Social Innovation Center held a th
 Suhua changed its name to the 9th line Suhua Highway mountain road improvement plan, started planning in 2009, started construction in 2011, On February 5, 2018, the Suao-East Australia section was completed and opened to traffic, and small cars were opened. Since Suhua Reform did not open locomotives or heavy locomotives, many locomotives protested when they opened up. They believed that the ban on locomotive traffic in Suhua was a discrimination against locomotives and caused controversy. 
 
  <figure> 
- <img src="/assets/imgs/350438d6348a63737e45c0bee581b542f5cad01a_1_580x500.jpg"> 
+ <img src="/assets/imgs/350438d6348a63737e45c0bee581b542f5cad01a"> 
  <figcaption> Suhua change road section overview, the picture is taken from the <a href="https://thbu4.thb.gov.tw/page?node=6861c85c-e12e-468e-b885-f3e9d29d40ed" target="_blank">understanding of Suhua</a> </figcaption> 
  </figure> 
 
